<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal" >

            <LinearLayout
                android:id="@+id/miniAdLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/linearLayout"
             android:paddingTop="20dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                style="@style/text_18"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/adv_intrduce"
                android:textSize="18dip"
                android:visibility="visible" />

            <TextView
                android:id="@+id/PointsTextView"
                style="@style/text_18"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/awardPoints"
                android:textSize="20dp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/OffersButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel_selector"
                    android:text="@string/offerList"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/popAdButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel_selector"
                    android:text="@string/popAd"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" >

                    <Button
                        android:id="@+id/appOffersButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_cancel_selector"
                        android:text="@string/appOfferList"
                        android:visibility="visible" />

                    <Button
                        android:id="@+id/gameOffersButton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_cancel_selector"
                        android:text="@string/gameOfferList"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <Button
                    android:id="@+id/diyAdListButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel_selector"
                    android:text="@string/diyAdList"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/diyAdButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel_selector"
                    android:text="@string/diyAd"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

<!--                 <Button
                    android:id="@+id/moreAppsButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel_selector"
                    android:text="@string/moreApps"
                    android:visibility="visible" /> -->

                <Button
                    android:id="@+id/ownAppDetailButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel_selector"
                    android:text="@string/ownAppDetail"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/AdLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/RelativeLayout01"
            android:gravity="center_horizontal"
            android:orientation="vertical" />
    </RelativeLayout>

</ScrollView>