<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="30dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        style="@style/text_16_666666"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="@drawable/dialog_title"
        android:gravity="center"
        android:text="@string/title_alert"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10.0dip"
        android:background="@drawable/dialog_content"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <TextView
            android:id="@+id/message"
            style="@style/text_16_666666"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/dialog_button"
        android:gravity="center|top"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/positiveButton"
            style="@style/text_15_ffffff_sdw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_ok_selector"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/exit_save_game"
            android:textStyle="bold" />

        <Button
            android:id="@+id/negativeButton"
            style="@style/text_15_ffffff_sdw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_cancel_selector"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/exit_game"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>