<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:background="@drawable/background" >

        <LinearLayout
            android:id="@+id/context"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                style="@style/text_18"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/introduce_title"
                android:textStyle="bold"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/message"
                    style="@style/text_18"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/introduce_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/context"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/double_click"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/double_selector"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/double_text"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/single_click" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:padding="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/resume_click"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/coutinue_cancel_selector"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/resume_text"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/continue_click" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:gravity="center"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/voice_click"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:background="@drawable/open_voice"
                    android:gravity="center"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/voicd_text"
                    style="@style/text_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/voice" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>